[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IAU_baseline"
version = "1.0.0"
description = "Tools for the baseline/filter"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "IAU", email = "schuck@iau.uni-frankfurt.de" },
]
license = { text = "GNU General Public License v3 (GPLv3)" }
keywords = ["baseline", "outlier", "pollution", "filter", "detection"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=2.3.3",
  "matplotlib",
  "scipy"
]

[project.urls]
Homepage = "https://github.com/AtmosphericAngels/IAU_baseline.git"
